<resources>
    <string name="app_name">mungmung</string>
    <string name="title_home">홈</string>
    <string name="title_search">북마크</string>
    <string name="title_profile">프로필</string>
    <string name="title_photo">유기견</string>

    <!-- Strings related to login -->
    <string name="top_welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">이름 / 닉네임</string>
    <string name="pet">반려동물 이름</string>
    <string name="save">저장</string>
    <string name="prompt_email">Enter your email address</string>
    <string name="prompt_pet">반려동물의 이름을 적어주세요.</string>
    <string name="prompt_name">본인의 이름 또는 닉네임을 적어주세요.</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_account">Need an account? SIGN UP</string>
    <string name="find_password">Forgot your password?</string>
    <string name="action_log_in">로그인/회원가입</string>
    <string name="check_puppy">Do you have any puppy?</string>
    <string name="check_center">Are you a center for protecting dogs?</string>
    <string name="search">Search</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up_with_google">Sign up with Google</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="new_pw">Send New Password</string>
    <string name="explain_input_email">Enter the email associated \nwith your account.</string>
    <string name="explain_send_email">And we will send an email with new password.</string>
    <string name="send">Send</string>

    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to profile -->
    <string name="followers">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="posts">게시물</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="user_name">사용자 이름</string>
    <string name="pet_name">반려동물 이름</string>
    <string name="zero">0</string>
    <string name="remove_articles">글삭제</string>
    <string name="finish">완료</string>

    <!-- Preference Titles -->
    <string name="preference_account">Account</string>

    <!-- Preferences -->
    <string name="log_out">Log out</string>
    <string name="change_pw">Change Password</string>
    <string name="delete_account">Delete account</string>
    <string name="add_image_textview">올리기</string>
    <string name="desc_max_length">최대 20자까지 입력 가능합니다.</string>

    <string name="follow">팔로우하기</string>
</resources>