<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/photoFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_photo_24"
        android:title="@string/title_photo" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:enabled="true"
        android:title="@string/title_profile"/>

</menu>