<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewPwFragment">

    <TextView
        android:id="@+id/txt_new_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/new_pw"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_explain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_input_email"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_pw"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_explain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_send_email"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_explain1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_change_pw_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/send_email"/>


    <EditText
        android:id="@+id/send_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_explain2" />

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/send_email"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txt_Log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_log_in"
        android:layout_marginRight="24dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_email"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>