<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OtherUserFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/other_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/baseline_emoji_emotions_24"
        app:layout_constraintRight_toLeftOf="@id/other_profile_image_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass,MissingConstraints" />

    <TextView
        android:id="@+id/other_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="53dp"
        android:text="@string/user_name"
        android:textColor="@color/second_brown"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/other_profile_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/other_profile_pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/pet_name"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintLeft_toRightOf="@id/other_profile_image"
        app:layout_constraintTop_toBottomOf="@id/other_profile_user_name"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/other_profile_image_post"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/ic_baseline_pets_24"
        app:layout_constraintLeft_toRightOf="@id/other_profile_image"
        app:layout_constraintRight_toLeftOf="@id/other_profile_image_followers"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/other_profile_text_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/other_profile_image_post"
        app:layout_constraintEnd_toEndOf="@id/other_profile_image_post"
        app:layout_constraintTop_toBottomOf="@id/other_profile_image_post"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/other_profile_text_posts_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/other_profile_text_posts"
        app:layout_constraintEnd_toEndOf="@id/other_profile_text_posts"
        app:layout_constraintTop_toBottomOf="@id/other_profile_text_posts"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/other_profile_image_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/baseline_add_reaction_24"
        app:layout_constraintLeft_toRightOf="@id/other_profile_image_post"
        app:layout_constraintRight_toLeftOf="@id/other_profile_image_following"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/other_profile_text_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/other_profile_image_followers"
        app:layout_constraintEnd_toEndOf="@id/other_profile_image_followers"
        app:layout_constraintTop_toBottomOf="@id/other_profile_image_followers"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/other_profile_text_followers_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/other_profile_image_followers"
        app:layout_constraintEnd_toEndOf="@id/other_profile_image_followers"
        app:layout_constraintTop_toBottomOf="@id/other_profile_text_followers"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/other_profile_image_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/baseline_emoji_emotions_24"
        app:layout_constraintLeft_toRightOf="@id/other_profile_image_followers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/other_profile_text_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/other_profile_image_following"
        app:layout_constraintEnd_toEndOf="@id/other_profile_image_following"
        app:layout_constraintTop_toBottomOf="@id/other_profile_image_following"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/other_profile_text_follows_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/second_brown"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/other_profile_image_following"
        app:layout_constraintEnd_toEndOf="@id/other_profile_image_following"
        app:layout_constraintTop_toBottomOf="@id/other_profile_text_follow"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/other_user_follow_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/other_profile_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/other_profile_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/other_user_follow_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>